--- a/Usuario Avanzado/Usuario Avanzado/index.html
+++ b/Usuario Avanzado/Usuario Avanzado/index.html
@@ -103,6 +103,14 @@
                             <input type="text" id="userName" name="userName" required>
                         </div>
                         <div class="form-group">
+                            <label for="userSurname">Apellido:</label>
+                            <input type="text" id="userSurname" name="userSurname" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="userCI">CI:</label>
+                            <input type="text" id="userCI" name="userCI" required>
+                        </div>
+                        <div class="form-group">
                             <label for="userEmail">Email:</label>
                             <input type="email" id="userEmail" name="userEmail" required>
                         </div>
@@ -111,11 +119,14 @@
                             <input type="tel" id="userPhone" name="userPhone" required>
                         </div>
                         <div class="form-group">
+                            <label for="userPassword">Contraseña:</label>
+                            <input type="password" id="userPassword" name="userPassword" required>
+                        </div>
+                        <div class="form-group">
                             <label for="userPlan">Plan Inicial:</label>
                             <select id="userPlan" name="userPlan">
-                                <option value="Plan Básico">Plan Básico</option>
-                                <option value="Plan Intermedio">Plan Intermedio</option>
-                                <option value="Plan Avanzado">Plan Avanzado</option>
+                                <option value="Paciente">Paciente</option>
+                                <option value="Deportista">Deportista</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -128,10 +139,12 @@
                     <table class="horarios-table">
                         <thead>
                             <tr>
-                                <th class="tablajeje" colspan="4">Usuarios Actuales</th>
+                                <th class="tablajeje" colspan="6">Usuarios Actuales</th>
                             </tr>
                             <tr class="tablajeje">
                                 <th>Nombre</th>
+                                <th>Apellido</th>
+                                <th>CI</th>
                                 <th>Email</th>
                                 <th>Teléfono</th>
                                 <th>Plan</th>
@@ -143,6 +156,7 @@
                 </div>
             </div>
         </section>
+        
         
         <section id="Gimnasios">
     <h2>Gestionar Ejercicios</h2>
