--- a/HOME/HOME/index.html
+++ b/HOME/HOME/index.html
@@ -248,7 +248,7 @@
                    name="ci"
                    maxlength="8"
                    onkeydown="noEspacios(event)"
-                   placeholder="66666669"
+                   placeholder="Ingrese su C.I."
                    required>
         
             <label>Contraseña</label>
@@ -256,6 +256,7 @@
                    id="password"
                    name="password"
                    minlength="6"
+                   maxlength="20"
                    placeholder="Ingrese su contraseña"
                    required>
         
