--- a/User/register.html
+++ b/User/register.html
@@ -10,7 +10,7 @@
 <body>
     <div class="register-container">
         <div class="register-card">
-            <h2>Register at S.I.G.EN</h2>
+            <h2>Registrate en S.I.G.EN</h2>
             <form id="registerForm">
                 <div class="form-group">
                     <label for="ci">C.I.</label>
